made more progress

--- a/bootstrap.html
+++ b/bootstrap.html
@@ -199,9 +199,9 @@
         </div>
     </div>
 
-    <div class="container-fluid cont-22 mb-5">
-        <div class="container mt-5">
-            <div class=" pt-5">
+    <div class="container-fluid cont-22 mb-5 abt-me">
+        <div class="container">
+            <div class="pt-5">
                 <div>
                     <h3 class="about-me">About me</h3>
                 </div>
@@ -213,8 +213,11 @@
                         experience! If you like
                         what you see and have a project you need coded, don’t hesitate to contact me.</p>
                 </div>
-                <button type="button" class="btn rounded-0 text-white">Get my resume</button>
+                <button type="button" class="btn rounded-0 text-white butn">Get my resume</button>
             </div>
+        </div>
+        <div class="pt-4">
+            <div class="border-top border-light mx-auto lin-2"></div>
         </div>
     </div>
 
